# -Loop-Engineer

./: .env.example  .gitignore  README.md  config.py  main.py  output.json  pyproject.toml  run.test.jsonl
.claude/skills/log-query/: SKILL.md
core/: __init__.py  agent_loop.py  file_state.py  prompts.py  provider.py  provider_errors.py  registry.py  tools.py  transcript.py  types.py
core/builtin_tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  load_skill.py  read.py  readstate.py  ripgrep.py  write.py
core/loop/: __init__.py  orchestrator.py
core/loop/phases/: __init__.py  compact.py  stream_turn.py  (+2 more)
core/providers/: __init__.py  _sse.py  anthropic.py  openai_chat.py  openai_responses.py
core/skills/: __init__.py  load_skill.py  loader.py
core/tool_executor/: __init__.py  base.py  batch.py  streaming.py
skills/bullet-summarize/: SKILL.md
telemetry/: __init__.py  events.py  file_tracer.py  tracer.py
tests/: demo_tool_calling.py  test_agent_loop.py  test_agent_loop_skill.py  test_aggregate.py  test_anthropic.py  test_load_skill.py  test_orchestrator.py  test_provider_errors.py  test_recovery_chain.py  test_skill_loader.py  test_skill_smoke.py  test_sse.py  test_stream_turn_executor.py  test_stub_raises.py  test_tools.py  test_tracer.py  test_transcript.py  test_types.py
tests/test_builtin_tools/: test_builtin_tools.py  test_glob.py  test_grep.py  test_read.py  test_read_edit.py  test_readstate.py  test_register.py  test_write.py
tests/test_tool_executor/: test_base.py  test_batch.py  test_integration.py  test_make_executor.py  test_streaming.py
(+16 files in other folders)
