[project]
name = "loop-engineer"
version = "0.1.0"
description = "Python 双层 agentic loop 复现 —— Phase 1: 骨架 + 全程埋点 + Anthropic 直通"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "aiofiles>=23",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

# 本项目是「应用」而非「库」：core / telemetry 作为顶层包直接放项目根,
# 不安装为可分发包;依赖仍由 uv 管理进 .venv。
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
